build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/phpt-stderr.phpt.warn
WARNING:8:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'must'
WARNING:8:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'look'
WARNING:8:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'at'
WARNING:8:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'STDERR'
WARNING:8:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'when'
WARNING:8:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'running'
WARNING:8:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'PHPT'
WARNING:8:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'tests'
WARNING:9:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
